core/src/lexical/tests/identifiers.go
teste
1break
1teste
1t     // error
1break
?t     // error
compila  // ok
1teste // error
!teste // not error
*teste // not error
_teste // ok
